--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "carponstop-cli",
-  "version": "0.1.2",
+  "name": "carbonstop-cli",
+  "version": "0.1.4",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -13,8 +13,15 @@
   "author": "lijinhai255 <17301280665@163.com>",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "chalk": "^5.2.0",
+    "commander": "^11.0.0",
+    "crypto": "^1.0.1",
     "dedent": "^0.7.0",
+    "inquirer": "^9.1.4",
+    "npmlog": "^7.0.1",
+    "pkg-dir": "^7.0.0",
+    "rxjs": "^7.8.0",
     "yargs": "^17.6.2"
   }
 }
