--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "carbonstop-cli",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -18,6 +18,7 @@
     "commander": "^11.0.0",
     "crypto": "^1.0.1",
     "dedent": "^0.7.0",
+    "ejs": "^3.1.9",
     "inquirer": "^9.1.4",
     "npmlog": "^7.0.1",
     "pkg-dir": "^7.0.0",
