--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "chalk": "^5.2.0",
+    "cheerio": "^1.0.0-rc.12",
     "commander": "^11.0.0",
     "crypto": "^1.0.1",
     "dedent": "^0.7.0",
@@ -22,6 +23,7 @@
     "inquirer": "^7.3.3",
     "npmlog": "^7.0.1",
     "pkg-dir": "^7.0.0",
+    "puppeteer-core": "^21.0.1",
     "ssh2-sftp-client": "^9.1.0",
     "yargs": "^17.6.2"
   }
